# IncrementalGame

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  Makefile.vc  README.md  compile_commands.json  game.cpp  make-run.sh
core/: BigNum.hh  BigNum.hpp  game.cpp  game.hh  game.hpp  render.hh  render.hpp  resourceRegistry.hh  resourceRegistry.hpp
core/render/: ScreenManager.hpp  Text.hpp  Window.hpp
data/: recipes.json
headers/: BigNum.hh  game.hh  game.hpp  render.hh
include/: json.hpp
resources/: Clicker.hh  Clicker.hpp  Factory.hh  Factory.hpp
screens/: MainScreen.hh  MainScreen.hpp
src/: BigNum.hpp  Logger.hpp  ResourceManager.hpp  ScreenManager.hpp  SystemManager.cpp  SystemManager.hpp  game.cpp  game.hpp  resourceRegistry.hpp  setup.hpp
src/render/: Screen.cpp  Screen.hpp  ScreenManager.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp  wcwidth.c  wcwidth.cpp  wcwidth.h  wcwidth.hpp  wutils.cpp  wutils.hpp
src/resources/: Clicker.hpp  Factory.hpp  Inventory.cpp  Inventory.hpp  Points.hpp  Recipes.cpp  Recipes.hpp  SaveData.cpp  SaveData.hpp
src/screens/: MainScreen.cpp  MainScreen.hpp
src/systems/: ResourceManager.cpp  ResourceManager.hpp  ScreenManager.cpp  ScreenManager.hpp
src/windows/: ScreenSwitcher.hpp
